Added project componetns

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,8 +1,8 @@
 a {
     text-decoration: none;
-    color: #F9AE9F;
+    color: #e87461;
 }
 
 a:hover {
-    color: #fe938c;
+    color: #f2afa3;
 }
