--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -8,6 +8,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.gatsby-resp-image-figcaption {
+  text-align: center;
+  font-style: italic;
+}
+
 article,
 aside,
 details,
